# Chimera

./: .LOCKED_DO_NOT_EDIT  .ccp_cmake.txt  .ccp_includes.txt  .ccp_symbols.txt  .ccp_tree.txt  .chimera_root  .gitignore  ARCHITECTURE_DIAGRAM.txt  BASELINE_REPORT.ps1  BUILD_AND_RUN.sh  BUILD_CRYPTO_ENGINE.sh  BUILD_TEST.txt  CAPITAL_GOVERNANCE_LAYER.sh  CHANGELOG.md  CHANGELOG_v4.10.0.md  CHANGELOG_v4.10.1.md  CHANGELOG_v4.10.2.md  CHANGELOG_v4.10.3.md  CHANGELOG_v4.11.0.md  CHANGELOG_v4.12.1.md  CHANGELOG_v4.13.0.md  CHANGELOG_v4.14.0.md  CHANGELOG_v4.2.md  CHANGELOG_v4.3.1.md  CHANGELOG_v4.3.2.md  CHANGELOG_v4.3.3.md  CHANGELOG_v4.3.4.md  CHANGELOG_v4.3.md  CHANGELOG_v4.4.0.md  CHANGELOG_v4.5.0.md  CHANGELOG_v4.5.1.md  CHANGELOG_v4.6.0.md  CHANGELOG_v4.7.0.md  CHANGELOG_v4.8.0.md  CHANGELOG_v4.9.0.md  CHANGELOG_v4.9.10.md  CHANGELOG_v4.9.11.md  CHANGELOG_v4.9.19.md  CHANGELOG_v4.9.21.md  CHANGELOG_v4.9.22.md  (+175 more)
Alpha/: CMakeLists.txt  Makefile  README.md  alpha_dashboard.html  alpha_trades_20251227.csv  config.ini
Alpha/Alpha/config/: config.ini.template
Alpha/Alpha/src/: main.cpp  main_v1.2.0.cpp
Alpha/include/: AlphaEngine.hpp  AlphaEngine_v1.2.0.hpp  DashboardServer.hpp
Alpha/include/core/: Types.hpp
Alpha/include/engine/: InstrumentEngine.hpp
Alpha/include/exit/: ExitLogic.hpp  ExitLooseness.hpp  GoldPyramidRule.hpp  GoldTrailingEngine.hpp  NewsGate.hpp  SymbolExitProfile.hpp  VolatilityHold.hpp
Alpha/include/fix/: CTraderFIXClient.hpp  FIXConfig.hpp  FIXFastParse.hpp  FIXFieldView.hpp  FIXMessage.hpp  FIXResendRing.hpp  FIXSSLTransport.hpp  FIXSession.hpp  FixDegradedState.hpp
Alpha/include/gui/: AlphaGUI.hpp  ImGuiPlatform.hpp
Alpha/include/logging/: TradeLogger.hpp
Alpha/include/ml/: MLFeatures.hpp  MLLogger.hpp
Alpha/include/risk/: ExpectancyGuard.hpp  PnLAttribution.hpp
Alpha/include/session/: AsiaExceptionGate.hpp  SessionDetector.hpp
Alpha/src/: main_v1.2.0.cpp
causal_lab/: CMakeLists.txt
causal_lab/include/: AttributionEngine.hpp  EventBus.hpp  RegimeStore.hpp  ReplayEngine.hpp  ShadowFarm.hpp
causal_lab/src/: AttributionEngine.cpp  EventBus.cpp  EventTypes.cpp  RegimeStore.cpp  ReplayEngine.cpp  ShadowFarm.cpp
causal_lab/tools/: attrib_main.cpp  batch_main.cpp  replay_main.cpp
core/: CMakeLists.txt  CapitalRouter.hpp  CorrelationGovernor.hpp  ExecutionAuthority.hpp  FeedEvent.hpp  FlowThrottle.hpp  HealthWatchdog.hpp  KillSwitch.hpp  MarketStateBuilder.hpp  MetricsHTTPServer.hpp  PortfolioGovernor.hpp  RateLimiter.hpp  SymbolController.hpp  SymbolLane_ANTIPARALYSIS.cpp  SymbolLane_ANTIPARALYSIS.cpp.bak.1768902592  SymbolLane_ANTIPARALYSIS.hpp  SymbolRegistry.hpp  SymbolState.hpp  Telemetry.hpp  TickSnapshot.hpp  V2Desk.hpp  V2Runtime.hpp  contract.hpp  event_spine.hpp  spine.cpp  spine.hpp  spine_recorder.cpp  spine_replay.cpp  telemetry.cpp  telemetry.hpp  windows_compat.hpp
core/include/chimera/: Desk.hpp  EventBus.hpp  IPC.hpp  SymbolLane.hpp  SymbolLane_ANTIPARALYSIS.hpp
core/include/engines/: RegimeClassifier.hpp
core/include/governance/: GovernanceController.hpp
core/src/: EventBus.cpp  SymbolLane.cpp
core/src/audit/: BinaryEventLog.cpp  ReplayEngine.cpp
core/src/causal/: CounterfactualEngine.cpp  ReplayController.cpp  ReplayMode.cpp  ShadowExecutor.cpp  SignalAttributionLedger.cpp  counterfactual.cpp  events.cpp  recorder.cpp  replay.cpp
core/src/control/: ControlPlane.cpp  RegimeClassifier.cpp
core/src/engines/: FundingSniper.cpp
core/src/execution/: BinanceIO.cpp  BinanceIO.cpp.FAKE  BinanceIO.cpp.bak  BinanceUserStream.cpp  ExecutionEngine.cpp  ExecutionEngine.cpp.backup  MarketBus.cpp  MockExchangeIO.cpp  OrderManager.cpp  PositionBook.cpp  RiskGovernor.cpp  RiskGovernor.cpp.bak  Telemetry.cpp
core/src/governance/: CapitalAllocator.cpp  CapitalLadder.cpp  CorrelationGovernor.cpp  GovernanceController.cpp  SessionGovernor.cpp  StrategyFitnessEngine.cpp
core/src/infra/: ClockSync.cpp  CrossVenueRouter.cpp  LatencyEngine.cpp  LogRotator.cpp  PredictiveRouter.cpp  RateLimitGovernor.cpp  RiskPools.cpp  VenueBiasEngine.cpp  WarmStartOFI.cpp
core/src/liquidity/: InventorySkewEngine.cpp  MakerRebateEngine.cpp
core/src/pnl/: PnLBridge.cpp
core/src/safety/: EmergencyFlatten.cpp  ExchangeInfoCache.cpp  PrecisionEngine.cpp  StatePersistence.cpp
core/src/state/: StateSnapshot.cpp
core/src/strategy/: BTCCascade.cpp  BTCCascade.cpp.bak  ETHFade.cpp  Microstructure.cpp  StrategyRouter.cpp
core/src/survival/: CostGate.cpp  EdgeSurvivalFilter.cpp  SmartExitEngine.cpp
core/src/telemetry/: TelemetryServer.cpp
core/src/venue/: BybitIO.cpp  OKXIO.cpp
core/src/venues/: VenueWS.cpp
crypto_engine/: CMakeLists.txt
crypto_engine/include/: CryptoEngineV2.hpp  CryptoExecution.hpp  CryptoRiskManager.hpp  CryptoRuleset.hpp  CryptoScalpEngine.hpp  CryptoSignalEvaluator.hpp  ExecutionGate.hpp  SymbolId.hpp  TickCore.hpp
crypto_engine/include/binance/: BinanceConfig.hpp  BinanceDeltaGate.hpp  BinanceDepthAdapter.hpp  BinanceDepthAdapterStub.hpp  BinanceDepthAdapterWS.hpp  BinanceDepthFeed.hpp  BinanceDepthParser.hpp  BinanceDepthStream.hpp  BinanceEngine.hpp  BinanceHFTFeed.hpp  BinanceHMAC.hpp  BinanceHealth.hpp  BinanceHotState.hpp  BinanceLatencyState.hpp  BinanceMetrics.hpp  BinanceOrderBook.hpp  BinanceOrderBookSoA.hpp  BinanceOrderSender.hpp  BinanceParser.hpp  BinanceREST.hpp  BinanceReplay.hpp  BinanceRestClient.hpp  BinanceRuntime.hpp  BinanceShard.hpp  BinanceShardManager.hpp  BinanceSnapshot.hpp  BinanceStreams.hpp  BinanceSubscribe.hpp  BinanceSupervisor.hpp  BinanceSymbolContext.hpp  BinanceSymbolRouter.hpp  BinanceTypes.hpp  BinanceWS.hpp  BinanceWSDelta.hpp  BinanceWebSocket.hpp  BinaryLog.hpp  BinaryLogWriter.hpp  (+18 more)
crypto_engine/src/: CryptoEngine.cpp
institutional_hardening/: CMakeLists.txt
institutional_hardening/include/: LineageTracker.hpp  MarketStateLogger.hpp  ReplayModeControl.hpp  Secrets.hpp  ShapleyEngine.hpp  TradeAuthority.hpp
institutional_hardening/src/: LineageTracker.cpp  MarketStateLogger.cpp  ReplayModeControl.cpp  Secrets.cpp  ShapleyEngine.cpp  TradeAuthority.cpp
(+1178 files in other folders)
